--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <p>Build SDK: API <span id="target-api-level"></span> / <span id="target-api-name"></span></p>
     <p>Min SDK: API <span id="min-api-level"></span> / <span id="min-api-name"></span></p>
 
+    <h3>Consent mode</h3>
+    <button onclick='setAnalyticsConsentMode({"ANALYTICS_STORAGE": "GRANTED", "AD_STORAGE": "GRANTED", "AD_USER_DATA": "GRANTED", "AD_PERSONALIZATION": "GRANTED"})'>Set analytics consent mode</button>
+
     <h3>Notifications</h3>
     <button onclick="clearNotifications()">Clear notifications</button>
     <button onclick="getID()">Get FCM ID</button>
